@@ -11,7 +11,7 @@ import tr.com.srdc.epsos.data.model.PatientId;
 import tr.com.srdc.epsos.data.model.xds.QueryResponse;
 import tr.com.srdc.epsos.data.model.xds.XDSDocument;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -26,7 +26,7 @@ public class PatientService {
     public static QueryResponse list(final PatientId pid, final String countryCode, final GenericDocumentCode documentCode,
                                      final Map<AssertionEnum, Assertion> assertionMap) throws XCAException {
 
-        return XcaInitGateway.crossGatewayQuery(pid, countryCode, Arrays.asList(documentCode), null, assertionMap,
+        return XcaInitGateway.crossGatewayQuery(pid, countryCode, List.of(documentCode), null, assertionMap,
                 RegisteredService.PATIENT_SERVICE.getServiceName());
     }
 
